style.css
:root{
   --custom-black: rgb(33, 37, 41);
}

*{
   box-sizing: border-box;
}

body{
   min-width: 360px !important;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   overflow: hidden;
}

.custom-header{
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   height: 80px;
   display: flex;
   align-items: center;
}

.custom-navbar{
   width: 100%;
   margin: 0 auto;
}

.custom-navbar button{
   border: 0;
   padding: 0;
   background-color: transparent;
   color: var(--custom-black);
   transition: 0.3s all;
}

.custom-navbar button > i{
   font-size: 1.8em;
}

.navbar-menu-btn{}

.navbar-logo{
   background-color: var(--custom-black);
}

.navbar-cart-btn{
   display: flex;
   align-items: start;
   justify-content: center;
}

.navbar-cart-btn:hover{
   transform: scale(1.1);
}

.navbar-cart-badge{
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 50%;
   aspect-ratio: 1/1;
   font-size: 0.8em;
}

.custom-main{
   width: 100%;
   height: 100%;
   flex: 1;
   position: relative;
}

.section-filter{
   z-index: 2;
   width: 100%;
   height: 100%;
   position: absolute;
   left: 0%;
   transform: translateX(-100%);
   background-color: white;
   transition: 0.3s all;
}

.section-cart{
   z-index: 2;
   width: 100%;
   height: 100%;
   position: absolute;
   right: 0%;
   transform: translateX(100%);
   background-color: white;
   transition: 0.3s all;
}

.section-products{
   z-index: 0;
   width: 100%;
   height: 100%;
   position: absolute;
}

.section-products-mask{
   z-index: 1;
   width: 100%;
   height: 100%;
   position: absolute;
   background: rgba(0, 0, 0, 0.3);
}

